--- a/src/pages/management-app/timeTable/main/main.html
+++ b/src/pages/management-app/timeTable/main/main.html
@@ -57,20 +57,9 @@
                         Options
                     </button>
                 </ion-item-options>
-                <!--
-                <ion-item-options side="right">
-                    <button ion-button color="primary" (click)="openAssignmentPage(period)">
-                        <ion-icon name="school"></ion-icon>
-                        Assignment
-                    </button>
-                    <button ion-button color="primary" (click)="openNotesPage(period)">
-                        <ion-icon name="paper"></ion-icon>
-                        Notes
-                    </button>
-                </ion-item-options> -->
             </ion-item-sliding>
         </ion-list>
-        <ion-list *ngIf="selectedDayTimetable && selectedDayTimetable.length==0">
+        <ion-list *ngIf="timetableData && (!selectedDayTimetable || selectedDayTimetable?.length==0)">
             <ion-item>
                 <h1>NO MODULE ON THIS DAY</h1>
             </ion-item>
@@ -86,5 +75,4 @@
             <ion-icon name="add"></ion-icon>
         </button>
     </ion-fab>
-
 </ion-content>
