TIMETABLE; view & edit page added, body returned from global error handler method

--- a/src/pages/management-app/timeTable/new/new.html
+++ b/src/pages/management-app/timeTable/new/new.html
@@ -7,7 +7,7 @@
     <form *ngIf="empList" #newTimeTableForm="ngForm" (ngSubmit)="onSubmit()">
 
         <ion-card *ngIf="empList">
-            <button ion-item type="button" (click)="onnSelectFaculty()">
+            <button ion-item type="button" (click)="onSelectFaculty()">
                 <ion-label stacked>Select Faculty</ion-label>
                 <ion-input [(ngModel)]="employeeName" disabled required placeholder="Select Faculty " name="faculty"></ion-input>
             </button>
