--- a/src/pages/management-app/timeTable/main/main.html
+++ b/src/pages/management-app/timeTable/main/main.html
@@ -10,7 +10,7 @@
         <ion-segment *ngIf="daysName" [(ngModel)]="selectedDay" (ionChange)="onDayChange()">
             <ion-segment-button *ngFor="let day of daysName" [value]="day">
                 <span class="textWhite">{{ day}}</span>
-            </ion-segment-button>   
+            </ion-segment-button>
         </ion-segment>
     </ion-toolbar>
 </ion-header>
@@ -19,13 +19,13 @@
 <ion-content class="background1">
 
 
-    <ion-list>
+    <ion-list *ngIf="daysName">
         <ion-list-header>
             {{date | amDateFormat: 'LL'}}
         </ion-list-header>
         <ion-list no-lines>
             <ion-item-sliding *ngFor="let period of selectedDayTimetable">
-                <button ion-item detail-none class="timetable-item">
+                <button ion-item detail-none class="timetable-item" (click)="openViewPage(period)">
                     <ion-grid no-padding>
                         <ion-row>
                             <ion-col col-4 class="border border-right-progress left-col" text-right>
@@ -51,13 +51,18 @@
                         </ion-row>
                     </ion-grid>
                 </button>
-                <ion-item-options side="right" icon-start>
+
+                <ion-item-options side="right">
+                    <button ion-button color="danger" (click)="openEditPage(period)">
+                        Edit
+                    </button>
                     <button ion-button color="primary" (click)="showoptions(period)">
-                        <ion-icon name="add"></ion-icon>
-                        Options
+                        More
                     </button>
                 </ion-item-options>
+                
             </ion-item-sliding>
+
         </ion-list>
         <ion-list *ngIf="timetableData && (!selectedDayTimetable || selectedDayTimetable?.length==0)">
             <ion-item>
