new and edit page reflection on main when filter are already applied, minor bug fixes

--- a/src/pages/management-app/timeTable/main/main.html
+++ b/src/pages/management-app/timeTable/main/main.html
@@ -84,7 +84,7 @@
                     <button ion-button color="danger" (click)="onDelete(period,i)">
                         Delete
                     </button>
-                    <button ion-button color="secondary" (click)="openEditPage(period)">
+                    <button ion-button color="secondary" (click)="openEditPage(period,i)">
                         Edit
                     </button>
                     <button ion-button color="primary" (click)="showoptions(period)">
