--- a/src/pages/management-app/complaint/complaint.html
+++ b/src/pages/management-app/complaint/complaint.html
@@ -1,13 +1,13 @@
 <ion-header>
     <nl-navbar [title]="title">
     </nl-navbar>
-    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
+    <ion-searchbar class="page-scroll-header" [ngClass]= "{'page-scroll-header': isScrolled}" [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
 
-    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
+    
     
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
@@ -15,3 +15,5 @@
     <complaint-main [complaintList]="complaintList" [searchInput]="searchInput"></complaint-main>
 
 </ion-content>
+
+<sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
