Removed background class

--- a/src/custom-components/account/account.html
+++ b/src/custom-components/account/account.html
@@ -2,7 +2,7 @@
     <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-card>
         <img [src]="userImage" (click)="onImageClick()" style="height:50%;width:50%;margin:auto">
