--- a/src/custom-components/survey-vote/survey-vote.html
+++ b/src/custom-components/survey-vote/survey-vote.html
@@ -6,7 +6,7 @@
     </nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-card *ngIf="surveyFromList && showInfo">
         <ion-card-header>
