--- a/src/pages/management-app/planner/main/main.html
+++ b/src/pages/management-app/planner/main/main.html
@@ -19,7 +19,7 @@
 
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ng-template #template>
         <ion-item *ngIf="currentDateSelected?.events.length==0 && !showSpinner">
