--- a/src/pages/management-app/suggestion/by-me/by-me.html
+++ b/src/pages/management-app/suggestion/by-me/by-me.html
@@ -7,7 +7,7 @@
 
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
   <p>by me mngmnt</p>
 
     <!-- <ion-refresher (ionRefresh)="doRefresh($event)">
