--- a/src/pages/student-app/suggestion/for-me/for-me.html
+++ b/src/pages/student-app/suggestion/for-me/for-me.html
@@ -2,6 +2,6 @@
     <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <p>for me student</p>
 </ion-content>
