--- a/src/custom-components/comments/comments.html
+++ b/src/custom-components/comments/comments.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <div class="no-comment" *ngIf="isCommentsEmpty">
         <ion-icon name="chatbubbles"></ion-icon>
