--- a/src/custom-components/pwd-edit/pwd-edit.html
+++ b/src/custom-components/pwd-edit/pwd-edit.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <form (ngSubmit)="onChangePwd()" novalidate>
 
