--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -1,25 +1,8 @@
 <ion-header>
-  
-    <nl-navbar [title]="title"></nl-navbar>
-    <!--
-    <ion-navbar color="primary">
-        <ion-toolbar>
-            <button ion-button menuToggle>
-                <ion-icon name="menu"></ion-icon>
-            </button>
-     <ion-title >
-      <span>{{title | uppercase}}</span>
-    </ion-title>
-      <ion-buttons end>
-        <ng-content></ng-content>
-        </ion-buttons>
-        </ion-toolbar>
-    </ion-navbar>
-  -->
-      
+  <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content padding class="csGrayBackground">
+<ion-content padding>
   <p>
     DASHBOARD......
   </p>
