--- a/src/pages/management-app/attendance/edit/edit.html
+++ b/src/pages/management-app/attendance/edit/edit.html
@@ -3,7 +3,7 @@
     </nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-card *ngIf="timeTableInfo">
         <h4>Module: {{timeTableInfo.moduleName}}</h4>
