--- a/src/pages/management-app/circular/newCircular/newCircular.html
+++ b/src/pages/management-app/circular/newCircular/newCircular.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground"> 
+<ion-content > 
     <form #newCircularForm="ngForm" (ngSubmit)="onSubmit()">
 
             <ion-card>
