--- a/src/pages/management-app/evaluation/module/module.html
+++ b/src/pages/management-app/evaluation/module/module.html
@@ -21,7 +21,7 @@
 
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
