--- a/src/pages/management-app/evaluation/new/new.html
+++ b/src/pages/management-app/evaluation/new/new.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <h1>{{evaluationType | titlecase}} Evaluation</h1>
 
