--- a/src/pages/management-app/poll/closedPoll/closedPoll.html
+++ b/src/pages/management-app/poll/closedPoll/closedPoll.html
@@ -4,7 +4,7 @@
     
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
