--- a/src/pages/management-app/poll/newPoll/newPoll.html
+++ b/src/pages/management-app/poll/newPoll/newPoll.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <form *ngIf="audienceList" #newPollForm="ngForm" (ngSubmit)="onSubmit()">
 
