--- a/src/pages/management-app/suggestion/for-me/for-me.html
+++ b/src/pages/management-app/suggestion/for-me/for-me.html
@@ -6,7 +6,7 @@
     
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
