--- a/src/pages/management-app/survey/currentSurvey/currentSurvey.html
+++ b/src/pages/management-app/survey/currentSurvey/currentSurvey.html
@@ -3,7 +3,7 @@
     <!-- <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar> -->
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
