--- a/src/pages/management-app/timeTable/new/new.html
+++ b/src/pages/management-app/timeTable/new/new.html
@@ -3,7 +3,7 @@
     </nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <form *ngIf="empList" #newTimeTableForm="ngForm" (ngSubmit)="onSubmit()">
 
         <ion-card *ngIf="empList">
