--- a/src/pages/student-app/appreciation/new/new.html
+++ b/src/pages/student-app/appreciation/new/new.html
@@ -2,7 +2,7 @@
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <form #newAppreciationForm="ngForm" (ngSubmit)="onSubmit()" *ngIf="faculties">
 
