--- a/src/pages/student-app/assignment/current/current.html
+++ b/src/pages/student-app/assignment/current/current.html
@@ -2,7 +2,7 @@
     <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content class="csGrayBackground">
+<ion-content >
 
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
