--- a/src/pages/student-app/complaint/complaint.html
+++ b/src/pages/student-app/complaint/complaint.html
@@ -7,7 +7,7 @@
 
 </ion-header>  
 
-<ion-content class="csGrayBackground">
+<ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
