--- a/src/custom-components/view-timetable/view-timetable.html
+++ b/src/custom-components/view-timetable/view-timetable.html
@@ -1,5 +1,8 @@
 <ion-header>
     <nl-modal-navbar [title]="title" (modalClosed)="dismiss()">
+        <button *ngIf="isAdmin" ion-button icon-only (click)="presentEditDeleteOption($event)">
+            <ion-icon name="more"></ion-icon>
+        </button>
     </nl-modal-navbar>
 </ion-header>
 
@@ -20,12 +23,16 @@
                 <b>Module:</b> {{timeTableInfo.moduleName}}</ion-label>
         </ion-item>
         <ion-item>
+            <ion-label>
+                <b>Year:</b> {{timeTableInfo.yearName}}</ion-label>
+        </ion-item>
+        <ion-item>
             <ion-avatar item-start>
                 <img [src]="timeTableInfo.employeePic || defaultAvatar">
             </ion-avatar>
             <h2>{{timeTableInfo.employeeName}}</h2>
         </ion-item>
-        <ion-item>
+        <ion-item *ngIf="timeTableInfo.departmentName">
             <ion-label>
                 <b>Department:</b> {{timeTableInfo.departmentName}}</ion-label>
         </ion-item>
