--- a/src/pages/management-app/timeTable/main/main.html
+++ b/src/pages/management-app/timeTable/main/main.html
@@ -50,7 +50,7 @@
 
         <ion-list no-lines>
             <ion-item-sliding *ngFor="let period of selectedDayTimetable;let i=index">
-                <button ion-item detail-none class="timetable-item" (click)="openViewPage(period)">
+                <button ion-item detail-none class="timetable-item" (click)="openViewPage(period,i)">
                     <ion-grid no-padding>
                         <ion-row>
                             <ion-col col-4 class="border border-right-progress left-col" text-right>
