--- a/src/pages/student-app/timeTable/main/main.html
+++ b/src/pages/student-app/timeTable/main/main.html
@@ -7,7 +7,7 @@
     </ion-navbar>
 
     <ion-toolbar no-border-top color="primary">
-        <ion-segment [(ngModel)]="selectedDay" (ionChange)="onDayChange()">
+        <ion-segment *ngIf="daysName" [(ngModel)]="selectedDay" (ionChange)="onDayChange()">  
             <ion-segment-button *ngFor="let day of daysName" [value]="day">
                 <span class="textWhite">{{ day }}</span>
             </ion-segment-button>
