--- a/src/pages/management-app/complaint/complaint.html
+++ b/src/pages/management-app/complaint/complaint.html
@@ -1,19 +1,15 @@
+<ion-searchbar [ngClass]="{'hide-header':showHelpers,'show-header':hideHelpers}" [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)"
+[debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
 <ion-header>
     <nl-navbar [title]="title">
     </nl-navbar>
-    <ion-searchbar class="page-scroll-header" [ngClass]= "{'page-scroll-header': isScrolled}" [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
 
-    
-    
 </ion-header>
 
-<ion-content >
+<ion-content>
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-  
-    <complaint-main [complaintList]="complaintList" [searchInput]="searchInput"></complaint-main>
-
+    <complaint-main  [complaintList]="complaintList" [searchInput]="searchInput"></complaint-main>
 </ion-content>
-
-<sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
+<sort-filter [ngClass]="{'hide-footer':showHelpers,'show-footer':hideHelpers}" [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
