edit above edit page case and its upation on main page handled

--- a/src/custom-components/complaint-main/complaint-main.html
+++ b/src/custom-components/complaint-main/complaint-main.html
@@ -29,7 +29,8 @@
 
         <ion-item-options side="right">
             <c-s-options [complaint]="complaint" [complaintIndex]="i"></c-s-options>
-        </ion-item-options>
+        </ion-item-options>n
+        
 
     </ion-item-sliding>
 
