--- a/src/pages/management-app/suggestion/for-me/for-me.html
+++ b/src/pages/management-app/suggestion/for-me/for-me.html
@@ -1,16 +1,17 @@
 <ion-header>
     <nl-navbar [title]="title">
-    </nl-navbar>
-    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
-    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
-    
+    </nl-navbar>    
 </ion-header>
+<div subHeader [ngClass]="{'hide-filter':showHelpers,'show-filter':hideHelpers}" >
+    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
+    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
+</div>
 
 <ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-
+    <ion-item blank></ion-item>
     <complaint-main [complaintList]="complaintList" [searchInput]="searchInput"></complaint-main>
 
 </ion-content>
