--- a/src/custom-components/complaint-main/complaint-main.html
+++ b/src/custom-components/complaint-main/complaint-main.html
@@ -16,7 +16,7 @@
                     <span>{{complaint.createdAt | amTimeAgo}}</span>
                 </ion-col>
                 <ion-col width-50 class="no-padding-l" [style.color]="complaint.statusColor">
-                    <ion-icon [name]="complaint.statusName"></ion-icon>
+                    <ion-icon [name]="statusIcons[complaint.statusName]"></ion-icon>
                     <span>{{complaint.statusName}}</span>
                 </ion-col>
             </ion-row>
@@ -25,10 +25,11 @@
             <c-s-options [complaint]="complaint" [complaintIndex]="i"></c-s-options>
         </ion-item-options>
     </ion-item-sliding>
-    <div *ngIf="isEmptyList">
+    <!-- <div *ngIf="isEmptyList">
         <ion-icon name="happy"></ion-icon>
         <br>NO RECORD FOUND
-    </div>
+    </div> -->
+    <no-results *ngIf="isEmptyList"></no-results>
 </ion-list>
 <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
