--- a/src/custom-components/list/list.html
+++ b/src/custom-components/list/list.html
@@ -1,28 +1,17 @@
 <ion-list>
-    <ion-card *ngFor="let appr of appreciationList">
-        <ion-badge class="csAppBadge csCenter">{{appr.studentName || appr.facultyName}}</ion-badge>
-
-        <ion-row>
-            <ion-col col-6>
-                <div class="csAppImageBlock">
-                    <img class="csAppImg" [src]="appr.facultyPicUrl || appr.studentPicUrl || defaultUserImage">
-                </div>
-            </ion-col>
-
-            <ion-col col-6>
-                <div class="csMargin5">
-                    <b class="csParagraph">{{appr.title}}</b>
-                    <p class="csParagraph">{{appr.description}}</p>
-                </div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col col-6>
+    <div *ngFor="let appr of appreciationList">
+        <ion-badge>
+                <b text-center>{{ appr.studentName || appr.facultyName }}</b>
+        </ion-badge>
+        <ion-card padding>
+        <img pic class="csAppImg csCenter" [src]="appr.facultyPicUrl || appr.studentPicUrl || defaultUserImage" />
+        <div>
+            <b> {{appr.title}}</b>
+            <p>{{appr.description}}</p>
+        </div>
                 <p>{{appr.createdAt | amDateFormat:'LL'}}</p>
-            </ion-col>
-
-        </ion-row>
     </ion-card>
+    </div>
 </ion-list>
 
 <ion-list class="no-comment" *ngIf="appreciationList?.length==0">
