--- a/src/pages/management-app/appreciation/for-me/for-me.html
+++ b/src/pages/management-app/appreciation/for-me/for-me.html
@@ -2,7 +2,7 @@
     <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content >
+<ion-content class="csPlainGray">
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
