--- a/src/pages/student-app/complaint/complaint.html
+++ b/src/pages/student-app/complaint/complaint.html
@@ -9,8 +9,8 @@
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
     <ion-fab right bottom>
-        <button ion-fab color="danger" (click)="openNewComplaintModal()">
-            <ion-icon name="add"></ion-icon>
+        <button ion-fab color="color5" (click)="openNewComplaintModal()">
+            <ion-icon name="add" color="secondary"></ion-icon>
         </button>
     </ion-fab>
     <complaint-main [complaintList]="complaintList" [searchInput]="searchInput"></complaint-main>
