--- a/src/pages/student-app/suggestion/by-me/by-me.html
+++ b/src/pages/student-app/suggestion/by-me/by-me.html
@@ -1,12 +1,12 @@
 <ion-header>
     <nl-navbar [title]="title">
     </nl-navbar>
-    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
 
-    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
-    
 </ion-header>
-
+<div subHeader [ngClass]="{'hide-filter':showHelpers,'show-filter':hideHelpers}" >
+        <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
+        <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
+</div>
 <ion-content >
     <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
