--- a/src/custom-components/survey-list/survey-list.html
+++ b/src/custom-components/survey-list/survey-list.html
@@ -5,22 +5,22 @@
         <h2>
             <b>{{survey.title}}</b>
         </h2>
-        <p>{{survey.description}}</p>
-        <p>{{survey.studentVoteCount + survey.employeeVoteCount}} Votes</p>
+        <h3>{{survey.description}}</h3>
+        <!-- <p>{{survey.studentVoteCount + survey.employeeVoteCount}} Votes</p> -->
         <ion-row>
-            <ion-col col-6 class="no-padding-l csGray5353">
+            <ion-col col-6 class="no-padding-l csGray5353" no-padding>
+                    <ion-icon name="md-clock"></ion-icon>
                 <span *ngIf="areSurveysExpired">Expired: </span>
                 <span *ngIf="!areSurveysExpired">Expires: </span>
                 <span>{{survey.expiredAt | amTimeAgo}}</span>
             </ion-col>
-            <ion-col col-6 class="no-padding-l csGray5353" [style.color]="survey.mainAudienceColor">
+            <ion-col col-6 class="no-padding-l csGray5353" [style.color]="survey.mainAudienceColor" no-padding>
                 <ion-icon name="at"></ion-icon>
                 <span>{{survey.mainAudienceName }}</span>
             </ion-col>
         </ion-row>
 
     </a>
-
 </ion-list>
 
 <div class="no-comment" *ngIf="surveyList?.length==0">
